tests/declaration_files_incremental_node/declaration_files_incremental_node.exp
======Start off with the .js files but without the .flow file======
Error: test_absolute.js:5
  5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:9
  9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:12
 12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:15
 15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:18
 18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:21
 21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:25
 25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:29
 29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:32
 32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:35
 35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:38
 38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:41
 41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_relative.js:3
  3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
      ^^^^^ Cannot cast `foo()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
        ^^^^^ [1]: `Implementation`
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
               ^^^^^^^ [2]: boolean


Found 13 errors
Error: test_absolute.js:5
  5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:9
  9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:12
 12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:15
 15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:18
 18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:21
 21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:25
 25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:29
 29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:32
 32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:35
 35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:38
 38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:41
 41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_relative.js:3
  3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
      ^^^^^ Cannot cast `foo()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
        ^^^^^ [1]: `Definition`
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
               ^^^^^^^ [2]: boolean


Found 13 errors
Error: test_absolute.js:5
  5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:9
  9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:12
 12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:15
 15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:18
 18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:21
 21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:25
 25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:29
 29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:32
 32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:35
 35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:38
 38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:41
 41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_relative.js:3
  3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
      ^^^^^ Cannot cast `foo()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
        ^^^^^ [1]: `Implementation`
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
               ^^^^^^^ [2]: boolean


Found 13 errors


======Start off with the .js files and the .flow file======
Error: test_absolute.js:5
  5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:9
  9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:12
 12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:15
 15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:18
 18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:21
 21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:25
 25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:29
 29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:32
 32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:35
 35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:38
 38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:41
 41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_relative.js:3
  3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
      ^^^^^ Cannot cast `foo()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
        ^^^^^ [1]: `Definition`
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
               ^^^^^^^ [2]: boolean


Found 13 errors
Error: test_absolute.js:5
  5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:9
  9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:12
 12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:15
 15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:18
 18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:21
 21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:25
 25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:29
 29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Implementation`
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:32
 32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:35
 35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:38
 38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:41
 41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Implementation`
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_relative.js:3
  3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
      ^^^^^ Cannot cast `foo()` to boolean because `Implementation` [1] is incompatible with boolean [2].
  References:
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
        ^^^^^ [1]: `Implementation`
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
               ^^^^^^^ [2]: boolean


Found 13 errors
Error: test_absolute.js:5
  5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:9
  9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:12
 12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:15
 15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:18
 18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:21
 21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:25
 25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:29
 29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:32
 32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:35
 35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:38
 38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:41
 41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_relative.js:3
  3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
      ^^^^^ Cannot cast `foo()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
        ^^^^^ [1]: `Definition`
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
               ^^^^^^^ [2]: boolean


Found 13 errors


======Start off without the .js files and with the .flow file======
Error: test_absolute.js:5
  5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:9
  9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:12
 12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:15
 15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:18
 18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:21
 21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:25
 25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:29
 29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:32
 32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:35
 35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:38
 38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:41
 41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_relative.js:3
  3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
      ^^^^^ Cannot cast `foo()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
        ^^^^^ [1]: `Definition`
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
               ^^^^^^^ [2]: boolean


Found 13 errors
Error: test_absolute.js:5
  5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:9
  9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:12
 12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:15
 15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:18
 18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:21
 21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:25
 25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:29
 29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:32
 32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:35
 35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:38
 38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:41
 41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_relative.js:3
  3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
      ^^^^^ Cannot cast `foo()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
        ^^^^^ [1]: `Definition`
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
               ^^^^^^^ [2]: boolean


Found 13 errors
Error: test_absolute.js:5
  5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    5: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:9
  9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
    9: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:12
 12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   12: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:15
 15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   15: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:18
 18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   18: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:21
 21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   21: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:25
 25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B1.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   25: (B1.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:29
 29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^^ Cannot cast `B2.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^^ [1]: `Definition`
   29: (B2.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                  ^^^^^^^ [2]: boolean

Error: test_absolute.js:32
 32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `C.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   32: (C.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:35
 35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `D.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   35: (D.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:38
 38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `E.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   38: (E.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_absolute.js:41
 41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
      ^^^^^^^ Cannot cast `F.fun()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
        ^^^^^^^ [1]: `Definition`
   41: (F.fun(): boolean); // Error either Implementation ~> boolean or Declaration ~> boolean
                 ^^^^^^^ [2]: boolean

Error: test_relative.js:3
  3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
      ^^^^^ Cannot cast `foo()` to boolean because `Definition` [1] is incompatible with boolean [2].
  References:
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
        ^^^^^ [1]: `Definition`
    3: (foo(): boolean); // Error: either Implementation ~> boolean or Definition ~> boolean
               ^^^^^^^ [2]: boolean


Found 13 errors
